Polished CSS and Fixed image cropping

--- a/app/assets/stylesheets/admin/dashboard.scss
+++ b/app/assets/stylesheets/admin/dashboard.scss
@@ -201,7 +201,7 @@ div {
     border-color: $border-color;
     border-radius: 0em;
     margin-left: 2.25em;
-    width: 90%;
+    width: 87%;
   }
 
   .chat-header {
